@@ -12,6 +12,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18626: the inspect module now offers a basic command line
+  introspection interface (Initial patch by Claudiu Popa)
+
 - Issue #3015: Fixed tkinter with wantobject=False.  Any Tcl command call
   returned empty string.
 
